@@ -3,6 +3,7 @@ This file documents the revision history for the SNClient agent.
 next:
          - change showing performance data in check_files and check_services (#243)
          - kill orphanded managed exporters which might block listen ports
+         - remove pipes from unknown macros in final output
          - fix crash in check_pdh
 
 0.34     Wed May 28 13:56:57 CEST 2025
